src/test/deca/context/invalid/created/object/equals_float_null.deca
// Description :
//    test equals entre un float et un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11:  (3.71) Le membre gauche n'est pas de type 'class'
class A{}
{
float a;
null b;
int c = a.equals(b);
}
